# bideobame

game/: Cargo.toml
game/source/: main.rs
game/source/components/: collider_component.rs  mesh_component.rs  mod.rs  movement_component.rs  rigidbody_component.rs  transform_component.rs
game/source/core/: app.rs  component_storage.rs  game.rs  geometry.rs  mod.rs  renderer.rs  state.rs
game/source/shaders/: fragment.wgsl  shader.wgsl  test.wgsl  vertex.wgsl
game/source/systems/: collision_system.rs  mesh_bufferer_system.rs  mesh_renderer_system.rs  mod.rs  movement_system.rs  transform_system.rs
game/source/utils/: app.rs  log.rs  state.rs
